# code-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IDEATION_CODE_IMPROVEMENTS.md  Makefile  PLAN.md  README.md  new-features.md  shotgun-prompt-20260124-154859_response.md
.beads/: issues.jsonl
.github/: copilot-instructions.md
.serena/: project.yml
.serena/cache/cpp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: ci_mode.md  code_structure.md  development_guidelines.md  project_purpose.md  rust_conventions.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
.sisyphus/: boulder.json
.sisyphus/notepads/code-analyzer-improvements/: learnings.md
.sisyphus/notepads/code-quality-refactor/: learnings.md
.sisyphus/notepads/code-quality-refactors/: learnings.md
.sisyphus/plans/: code-analyzer-improvements.md  code-quality-refactor.md  code-quality-refactors.md
PRPs/: code-analyzer-cli.md
PRPs/ai_docs/: rust_cli_patterns.md  tree_sitter_multi_language.md
history/: PLAN.md  TASKS.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/analyzer/: AGENTS.md  git.rs  language.rs  mod.rs  parser.rs  sanitizer.rs  walker.rs
src/output/: csv.rs  json.rs  mod.rs  terminal.rs
test_mixed_languages/: Main.java  app.ts  main.go  main.rs  math.c  math.cpp  script.js  utils.py
tests/: integration_tests.rs
tests/integration/: language_detection_test.rs
