[package]
name = "code-analyzer"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for analyzing codebases to identify refactoring candidates using AST parsing"
authors = ["Code Analyzer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/example/code-analyzer"
keywords = ["cli", "code-analysis", "refactoring", "ast", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "code-analyzer"
path = "src/main.rs"

[dependencies]
# CLI argument parsing with derive API
clap = { version = "4.0", features = ["derive"] }

# Tree-sitter AST parsing core
tree-sitter = "0.26"

# Tree-sitter language grammars
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"

# Directory traversal with gitignore support
ignore = "0.4"

# Terminal table formatting
prettytable-rs = "0.10"

# JSON serialization and datetime handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing and progress reporting
rayon = "1.8"
indicatif = "0.17"

# TTY detection for color output
atty = "0.2"

# Optional development dependencies for testing
[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["full-analysis"]
full-analysis = []
minimal = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"